# bluerpm

./: .gitignore  Cargo.toml  Embed.toml  flake.nix
.config/: hakari.toml
blinky/: Cargo.toml
rcar/: Cargo.toml  blue.rs  memory.x
rcar/src/: ble.rs  lib.rs  main.rs  motor.rs
rctrl/: Cargo.toml  memory.x
rctrl/src/: lib.rs  main.rs
rpmdisplay/: Cargo.toml
rpmdisplay/src/: main.rs
rpmsensor/: Cargo.toml
rpmsensor/src/: lib.rs  main.rs
spi7display/: Cargo.toml  memory.x
spi7display/src/: lib.rs  main.rs
