[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
nrf52833-pac = "0.12.2"
panic-probe = "1.0.0"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
