[package]
name = "rcar"
version = "0.1.0"
edition = "2021"

[dependencies]
microbit-bsp = "0.3.0"
embassy-futures = { version = "0.1", default-features = false }
embassy-executor = { version = "0.5", default-features = false, features = ["integrated-timers", "defmt", "arch-cortex-m", "executor-thread", "task-arena-size-32768"] }
embassy-time = { version = "0.3", default-features = false, features = ["defmt-timestamp-uptime"] }

nrf-softdevice = { version = "0.1.0", features = ["ble-central", "ble-peripheral", "ble-gatt-server", "ble-gatt-client", "s140", "nrf52833", "critical-section-impl", "defmt"] }
# nrf-softdevice-s122 = "0.1.2" # central only
nrf-softdevice-s140 = "0.1.2"

heapless = "0.7"
cortex-m-rt = "0.7"
static_cell = "2.1.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-sync = "0.5.0"
ringbuffer = { version = "0.15.0", default-features = false }
embassy-nrf = "0.1.0"
embedded-hal = "1.0.0"
micromath = "2.1.0"
array-concat = "0.5.5"


